docs: add documentation for update a opening
